# Fault-Tolerant-KV-Store

./: .gitignore  CMakeLists.txt  README.md  console.cpp  kv_store  kv_store.cpp  kv_store.h  launch.sh
include/: kv_store.h  raft.h  thread_pool.h
src/: console.cpp  kv_store.cpp  raft.cpp  server.cpp
